# tabpfn-mcp

./: LICENSE  README.md  pyproject.toml
src/tabpfn_mcp/: server.py
tests/: test_server.py
tests/data/classification/: test.csv  test_with_labels.csv  train.csv
tests/data/regression/: test.csv  test_with_target.csv  train.csv
