[project]
name = "tabpfn-mcp"
version = "0.1.0"
description = "MCP server for TabPFN"
dependencies = ["tabpfn-client", "fastmcp<3"]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit"]

[project.scripts]
tabpfn-mcp = "tabpfn_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tabpfn_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"